[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "moera-tools"
version = "0.2.0"
authors = [
    {name = "Shmuel Leib Melamud", email = "balu@moera.org"},
]
description = "Tools for Moera administrators"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Moera", "tools", "naming", "node", "administration", "provider"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: System Administrators",
]
dependencies = [
    "requests>=2.31.0",
    "camel-converter",
    "python-dateutil",
    "jsonschema>=4.19.0"
]

[project.scripts]
moname = "moname.moname:moname"

[project.urls]
"Homepage" = "https://github.com/MoeraOrg/moera-tools"
"Bug Tracker" = "https://github.com/MoeraOrg/moera-issues/issues"
"Overview" = "https://moera.org"
